Create new endpoint to get run files
