# src/main/java/com/dnastack/wes/api/WesV1Controller.java
@@ -105,9 +105,7 @@ public class WesV1Controller {
     @AuditActionUri("wes:run:read")
     @PreAuthorize("@accessEvaluator.canAccessResource('/ga4gh/wes/v1/runs/'+#runId, 'wes:runs:read', 'wes')")
     @GetMapping(value = "/runs/{run_id}", produces = { MediaType.APPLICATION_JSON_VALUE })
-    public RunLog getRun(@PathVariable("run_id") String runId) {
-        return adapter.getRun(runId);
-    }
+    public RunLog getRun(@PathVariable("run_id") String runId) { return adapter.getRun(runId); }
 
     @AuditActionUri("wes:run:status")
     @PreAuthorize("@accessEvaluator.canAccessResource('/ga4gh/wes/v1/runs/' + #runId , 'wes:runs:read', 'wes')")
@@ -119,15 +117,18 @@ public class WesV1Controller {
     @AuditActionUri("wes:run:cancel")
     @PreAuthorize("@accessEvaluator.canAccessResource('/ga4gh/wes/v1/runs/' + #runId, 'wes:runs:cancel', 'wes')")
     @PostMapping(path = "/runs/{runId}/cancel", produces = MediaType.APPLICATION_JSON_VALUE)
-    public RunId cancelRun(@PathVariable("runId") String runId) {
-        return adapter.cancel(runId);
-    }
+    public RunId cancelRun(@PathVariable("runId") String runId) { return adapter.cancel(runId); }
+
+    @AuditActionUri("wes:run:files")
+    @PreAuthorize("@accessEvaluator.canAccessResource('/ga4gh/wes/v1/runs/' + #runId , 'wes:runs:read', 'wes')")
+    @GetMapping(value = "/runs/{run_id}/files", produces = { MediaType.APPLICATION_JSON_VALUE })
+    public RunFiles getRunFiles(@PathVariable("run_id") String runId) { return adapter.getRunFiles(runId); }
 
     @AuditActionUri("wes:run:stderr")
     @PreAuthorize("@accessEvaluator.canAccessResource('/ga4gh/wes/v1/runs/' + #runId, 'wes:runs:read', 'wes')")
     @GetMapping(value = "/runs/{runId}/logs/stderr", produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
     public void getStderr(HttpServletResponse response, @RequestHeader HttpHeaders headers, @PathVariable String runId) throws IOException {
-        adapter.getLogBytes(response.getOutputStream(), runId,getRangeFromHeaders(response,headers));
+        adapter.getLogBytes(response.getOutputStream(), runId, getRangeFromHeaders(response, headers));
     }
 
     @AuditActionUri("wes:run:stderr")
@@ -139,7 +140,7 @@ public class WesV1Controller {
         @PathVariable String runId,
         @PathVariable String taskId
     ) throws IOException {
-        adapter.getLogBytes(response.getOutputStream(), runId, taskId, "stderr",getRangeFromHeaders(response,headers));
+        adapter.getLogBytes(response.getOutputStream(), runId, taskId, "stderr", getRangeFromHeaders(response, headers));
     }
 
     @AuditActionUri("wes:run:stdout")
@@ -151,7 +152,7 @@ public class WesV1Controller {
         @PathVariable String runId,
         @PathVariable String taskId
     ) throws IOException {
-        adapter.getLogBytes(response.getOutputStream(), runId, taskId, "stdout",getRangeFromHeaders(response,headers));
+        adapter.getLogBytes(response.getOutputStream(), runId, taskId, "stdout", getRangeFromHeaders(response, headers));
     }
 
     @AuditActionUri("wes:run:stderr")
@@ -164,7 +165,7 @@ public class WesV1Controller {
         @PathVariable String taskName,
         @PathVariable int index
     ) throws IOException {
-        adapter.getLogBytes(response.getOutputStream(), runId, taskName, index, "stderr",getRangeFromHeaders(response,headers));
+        adapter.getLogBytes(response.getOutputStream(), runId, taskName, index, "stderr", getRangeFromHeaders(response, headers));
     }
 
     @AuditActionUri("wes:run:stdout")
@@ -180,9 +181,9 @@ public class WesV1Controller {
         adapter.getLogBytes(response.getOutputStream(), runId, taskName, index, "stdout", getRangeFromHeaders(response, headers));
     }
 
-    private HttpRange getRangeFromHeaders(HttpServletResponse response, HttpHeaders headers){
+    private HttpRange getRangeFromHeaders(HttpServletResponse response, HttpHeaders headers) {
         List<HttpRange> ranges = headers.getRange();
-        if (ranges.isEmpty()){
+        if (ranges.isEmpty()) {
             return null;
         } else if (ranges.size() > 1) {
             // only return the first range parsed
